<resources>
    <string name="app_name">A10K</string>
    <string name="common_ok">확인</string>
    <string name="common_allow">수락</string>
    <string name="common_save">저장</string>
    <string name="common_retry">재시도</string>
    <string name="common_delete">삭제</string>
    <string name="common_cancel">취소</string>
    <string name="common_deny">거절</string>
    <string name="common_quit">종료</string>
    <string name="common_quit_toast">한번 더 누르시면 종료됩니다.</string>
    <string name="common_new_switch">스위치 등록</string>
    <string name="common_select_switch">스위치 선택</string>
    <string name="title_switch_list">All Switches</string>
    <string name="title_switch_each">10K</string>
    <string name="title_app_setting">Setting</string>
    <string name="title_noti">Noti</string>
    <string name="title_alarm">Alarm</string>
    <string name="toolbar_edit">Edit</string>
    <string name="toolbar_save">Save</string>
    <string name="toolbar_done">Done</string>
    <string name="toolbar_empty"></string>
    <string name="btn_on">on</string>
    <string name="btn_off">off</string>
    <string name="btn_capital_on">ON</string>
    <string name="btn_capital_off">OFF</string>
    <string name="btn_null">none</string>
    <string name="btn_str_on">1</string>
    <string name="btn_str_off">0</string>
    <string name="internet_error_title">인터넷 연결에러</string>
    <string name="internet_error_content">인터넷 상태를 확인해 주세요</string>
    <string name="switch_delete_title">삭제</string>
    <string name="switch_delete_content">스위치를 \n목록에서 삭제 하시겠습니까?</string>
    <string name="switch_rename_title">스위치 이름 변경하기</string>
    <string name="switch_rename_hit">10K 내방 스위치</string>
    <string name="add_switch">새로운 10k 등록하기</string>
    <string name="error_delete_switch">스위치를 삭제하는데 오류가 발생했습니다.</string>
    <string name="switch_change_seq_err_title">순수 수정 실패</string>
    <string name="switch_change_seq_err_content">스위치 순서를 변경하는데 오류가 발생했습니다</string>
    <string name="error_dialog_title">에러!</string>
    <string name="error_string_server">서버에 에러가 발생하였습니다.</string>
    <string name="error_string_auth">계정 인증에 문제가 발생하였습니다.</string>
    <string name="error_string_realm">데이터베이스를 불러오는데\n문제가 발생하였습니다.</string>
    <string name="error_string_network">네트워크에 문제가 있습니다.\n다시시도해 주세요</string>
    <string name="error_string_socket">스위치와 통신하는데\n문제가 발생하였습니다.</string>
    <string name="error_string_unknown">알수없는 에러가 발생하였습니다.</string>
    <string name="socket_connection_error_title">통신 연결 실패</string>
    <string name="socket_connection_error_content">서버와 통신이 원활하지 않습니다.</string>
    <string name="SOCKET_SUCCESS_CONNECT">서버와 통신 연결되었습니다.</string>
    <string name="SOCKET_ERROR_CONNECT">서버와 통신 연결하는데 오류가 발생했습니다.</string>
    <string name="SOCKET_DISCONNECT">서버와 통신 연결이 끊겼습니다.</string>
    <string name="info_content">스위치에 파란색 불이 들어온다면 \n버튼을 5초동안 터치해 보세요</string>
    <string name="info_content_sub">또로롱 소리가 나면 아래 버튼을 불러주세요.</string>
    <string name="info_btn_start">연결 시작</string>
    <string name="select_wifi_title">연결한 Wi-Fi 선택</string>
    <string name="select_wifi_info">스위치가 인터넷에 연결될 Wi-Fi를 선택해주세요 \n(5G Wi-Fi는 목록에 보이지 않아요)</string>
    <string name="select_wifi_permission_rationale">스위치와 연결하기 위해서는 권한이 필요합니다.</string>
    <string name="select_wifi_permission_denied">권한이 없으면 스위치와 연결할 수 없습니다.</string>
    <string name="permission_allow">ALLOW</string>
    <string name="permission_deny">DENY</string>
    <string name="item_wifi_connect">Connect</string>
    <string name="select_wifi_error_dialog_title">10K not found</string>
    <string name="select_wifi_error_dialog_content">AP모드된 스위치가 없습니다.</string>
    <string name="select_wifi_error_dialog_btn_confirm">Retry</string>
    <string name="select_wifi_error_dialog_btn_cancel">Cancel</string>
    <string name="connect_select_wifi_not_connect_title">10K AP 연결 실패</string>
    <string name="connect_select_wifi_not_connect_content">선택하신 10K 스위치 AP에 연결 할 수 없습니다</string>
    <string name="select_wifi_pass_dialog_title">Wi-Fi: </string>
    <string name="select_wifi_pass_dialog_content">Wi-Fi 비밀번호를 입력해주세요.</string>
    <string name="select_wifi_pass_dialog_btn_confirm">연결</string>
    <string name="select_wifi_pass_dialog_btn_cancel">닫기</string>
    <string name="select_wifi_pass_dialog_hint">wifi password</string>
    <string name="select_wifi_connect_wifi_error">Wi-Fi에 연결할 수 없습니다. 비밀번호를 다시 한번 확인해주세요.</string>
    <string name="set_switch_info">Setting...</string>
    <string name="set_switch_error_title">스위치 세팅 오류</string>
    <string name="set_switch_error_content">다시 한번 시도해주세요. \n오류가 반복될 시 문의해주시면 \n친절히 해결해드리겠습니다.</string>
    <string name="set_swtich_error_connect_switch_to_ap">스위치가 Wi-Fi공유와 연결이 되지 않았습니다. \nWi-Fi 비밀번호가 올바른지 다시 한번 체크해주세요.</string>
    <string name="set_switch_error_fail_connect_ap">AP에 접근할 수 없습니다. 올바른 비밀번호를 입력했는지 다시 한번 확인해주세요.</string>
    <string name="set_switch_error_fail_connect_broker">통신 서버에 접근할 수 없습니다. 문제가 반복될 시 문의해주세요.</string>
    <string name="rename_title">자! 이제 마지막이에요!</string>
    <string name="rename_content">방금 연결한 스위치의 이름을 설정해 주세요!</string>
    <string name="rename_btn_txt">스위치 등록 완료</string>
    <string name="rename_edit_hint">10k switch</string>
    <string name="rename_error_title">스위치 등록 실패</string>
    <string name="rename_error_content">스위치 등록에 오류가 발생했습니다</string>
    <string name="check_connection_error_title">스위치 등록 오류</string>
    <string name="check_connection_error_content">스위치가 AP에 연결되지 않았습니다 \nWi-Fi상태와 비밀번호를 \n다시 한번 체크해주세요</string>
    <string name="socket_error_title">스위치 등록 오류</string>
    <string name="socket_error_content">스위치와 통신하는데 오류가 발생했습니다\n스위치 전원을 내렸다 \n다시 올려 시도해주세요</string>
    <string name="add_connection_error_title">스위치 등록 오류</string>
    <string name="add_connection_error_content">스위치를 등록하는데 오류가 발생했습니다.</string>
    <string name="add_connection_btn_ok">재시도</string>
    <string name="nfc_info">NFC 태그를 등록하여 더욱 간편하게 사용하세요!</string>
    <string name="nfc_no_item">아직 등록된  NFC 태그가 없어요! \n핸드폰 가까이 다가가는 것만으로 손쉽게 \n스위치를 제어해보세요!</string>
    <string name="nfc_delete_title">NFC 삭제</string>
    <string name="nfc_delete_content">해당 NFC를 \n정말 삭제하시겠습니까?</string>
    <string name="nfc_add_info">스마트폰을 \nNFC 태그에 올려주세요.</string>
    <string name="nfc_add_error">NFC 태그를 등록하는데 오류가 발생했습니다. 이미 중복된 데이터가 있는지 확인해주세요.</string>
    <string name="nfc_not_available_title">NFC not available</string>
    <string name="nfc_not_available_content">NFC 기능을 사용할 수 \n없는 디바이스입니다.</string>
    <string name="nfc_toolbar_title_scan">태그 스캔</string>
    <string name="nfc_toolbar_title_select_btn">버튼 설정</string>
    <string name="nfc_toolbar_title_select_rename">10K</string>
    <string name="nfc_rename_info_title">자! 이제 마지막이에요!</string>
    <string name="nfc_rename_update_title">NFC 태그 이름 변경</string>
    <string name="nfc_rename_info_content">NFC 태그에 이름을 설정해서 관리하세요!</string>
    <string name="nfc_rename_hint">내방 NFC</string>
    <string name="nfc_no_title_err_title">이름 설정 오류</string>
    <string name="nfc_no_title_err_content">NFC 태그에 이름을 설정해주세요.</string>
    <string name="nfc_add_error_exist_tag_title">NFC 등록 오류</string>
    <string name="nfc_add_error_exist_tag_content">이미 등록된 태그 입니다</string>
    <string name="permission_dialog_title">Request permission</string>
    <string name="permission_dialog_message">안드로이드 마시멜로 이상에서는 스위치와 통신을 시도하기 위해 시스템 설정 권한이 필요합니다.</string>
    <string name="push_type">fcm</string>
    <string name="auth_phone_title">10K 시작하기</string>
    <string name="auth_phone_edit_hint">이곳에 휴대폰번호를 입력해 주세요.</string>
    <string name="auth_phone_txt">휴대폰 번호를 입력하고 화살표 버튼을 눌러주세요\n입력된 전화번호로 10K의 회원가입이 됩니다.</string>
    <string name="auth_phone_eror_invalid_number_title">입력 오류</string>
    <string name="auth_phone_eror_invalid_number_content">올바른 휴대폰 번호를 입력하세요.</string>
    <string name="auth_phone_error_request_certification">인증번호 요청하는데 오류가 발생했습니다.</string>
    <string name="auth_phone_error_register_user">회원등록하는데 오류가 발생했습니다.</string>
    <string name="auth_certi_title">휴대폰 인증번호</string>
    <string name="auth_certi_edit_hint">인증번호를 입력해 주세요.</string>
    <string name="auth_certi_txt_left">전송 받은 인증번호를 </string>
    <string name="auth_certi_txt_mid">60초 안에</string>
    <string name="auth_certi_txt_right"> 입력해주세요.</string>
    <string name="auth_certi_count">60초</string>
    <string name="auth_certi_unit">초</string>
    <string name="auth_phone_error_title">전송실패</string>
    <string name="auth_phone_error_content">인증번호를 전송하는데 오류가 발생했습니다.</string>
    <string name="auth_phone_btn_cancel">닫기</string>
    <string name="auth_phone_btn_retry">재전송</string>
    <string name="auth_certi_dialog_incorrect_certifinum_title">인증실패</string>
    <string name="auth_certi_dialog_incorrect_certifinum">인증번호를 잘못입력했습니다.</string>
    <string name="auth_certi_dialog_certifinum_timeover">인증번호 입력시간이 초과되었습니다.</string>
    <string name="auth_certi_dialog_btn_cancel">닫기</string>
    <string name="auth_certi_dialog_btn_retry">재전송</string>
    <string name="unauthorized_title">인증실패</string>
    <string name="unauthorized_content">다시 로그인이 해주세요.</string>
    <string name="unauthorized_btn">LOGIN</string>
    <string name="tab_title_admin">Admin</string>
    <string name="tab_title_nfc">NFC</string>
    <string name="tab_title_absence">Absence</string>
    <string name="tab_title_history">History</string>
    <string name="switch_setting_label_admin">ADMIN</string>
    <string name="switch_setting_label_user">USER</string>
    <string name="switch_setting_change_admin">Change Admin</string>
    <string name="switch_setting_chang_admin_dialog_title">ADMIN 변경</string>
    <string name="switch_setting_chang_admin_dialog_btn_cancel">취소</string>
    <string name="switch_setting_chang_admin_dialog_btn_submit">확인</string>
    <string name="switch_setting_chang_admin_error">관리자를 변경하는데 오류가 발생했습니다</string>
    <string name="switch_setting_admin_add_user">버튼을 눌러 새로운 사용자를 초대하세요.</string>
    <string name="switch_setting_admin_delete_user_title">연결 해제</string>
    <string name="switch_setting_admin_delete_user_content"> 님을 \n삭제 하시겠습니까?</string>
    <string name="swtich_change_admin_title">관리자 변경</string>
    <string name="swtich_change_admin_content">님으로 \n관리자를 변경하시겠습니까? \n변경하면 관리자 권한을 일게 됩니다</string>
    <string name="switch_setting_admin_change_admin_not_selected">관리자로 임명할 유저를 선택해주세요</string>
    <string name="invite_title">친구초대</string>
    <string name="invite_edit_hit">Name, Phone number</string>
    <string name="invite_people">PEOPLE</string>
    <string name="invite_message">10K로 손쉽게 집 조명을 제어해보세요!</string>
    <string name="invite_no_items">검색되는 유저가 없네요...</string>
    <string name="invite_read_contacts_granted_error_toast_message">초대 기능을 사용하기 위해서는 연락처 수집 권한이 필요 합니다.</string>
    <string name="invite_read_contacts_granted_error_info">초대 기능을 사용하기 위해서는 \n연락처 수집 권한이 필요 합니다.</string>
    <string name="invite_read_contacts_granted_error_info_reject_req">초대 기능을 사용하기 위해서는 \n연락처 수집 권한이 필요 합니다.\n 설정에서 권한을 활성화 해주세요!</string>
    <string name="invite_dialog_title">누군가의 초대를 받았습니다.</string>
    <string name="invite_dialog_content">초대를 수락 하시겠습니까?</string>
    <string name="invite_user_dialog_title">초대하기</string>
    <string name="invite_user_dialog_content">님을 초대하시겠어요?</string>
    <string name="invite_error_dialog_title">초대 실패</string>
    <string name="invite_error_dialog_content">님을 \n해당 스위치에 초대하는데 \n오류가 발생했습니다.</string>
    <string name="invite_user_invited">초대</string>
    <string name="invite_user_connected">연결됨</string>
    <string name="history_no_item">기록이 없습니다.</string>
    <string name="history_info">날짜를 변경해서 그날의 기록을 확인하세요.</string>
    <string name="history_error">기록을 가져오는데 오류가 발생했습니다.</string>
    <string name="history_date_format">yyyy년 MM월 dd일</string>
    <string name="history_item_control_phone">휴대폰</string>
    <string name="history_item_control_switch">스위치</string>
    <string name="history_item_op_on">ON</string>
    <string name="history_item_op_off">OFF</string>
    <string name="timer_toolbar_cancel">Cancel</string>
    <string name="timer_toolbar_save">Save</string>
</resources>